--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
+certifi==2017.11.5
+chardet==3.0.4
 Django==1.11.5
 django-flat-responsive==2.0
 django-redis-cache==1.7.1
 gevent==1.2.2
 greenlet==0.4.12
+idna==2.6
 meld3==1.0.2
 MySQL-python==1.2.5
 pytz==2017.2
 redis==2.10.6
+requests==2.18.4
 supervisor==3.3.3
+urllib3==1.22
 uWSGI==2.0.15
