--- a/config/uwsgi.ini
+++ b/config/uwsgi.ini
@@ -3,13 +3,16 @@
 
 listen = 128
 ; We need native threads in our app
-enable-threads = true
+;enable-threads = true
 socket = 127.0.0.1:3031
 chdir = /root/workspace/money
 wsgi-file = /root/workspace/money/money/wsgi.py
 processes = 4
-threads = 2
+
 stats = 127.0.0.1:9191
 http = :8088
-gevent = 128
-gevent-early-monkey-patch = true
+;gevent = 100
+;gevent-monkey-patch = true
+;gevent-early-monkey-patch = true
+;respawn processes taking more than 10 seconds
+harakiri=10
