--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,23 @@
+amqp==2.2.2
+billiard==3.5.0.3
+celery==4.1.0
 certifi==2017.11.5
 chardet==3.0.4
+contextlib2==0.5.5
 Django==1.11.5
+django-cors-headers==2.1.0
 django-flat-responsive==2.0
+django-multiselectfield==0.1.8
+django-redis==4.8.0
 django-redis-cache==1.7.1
-gevent==1.2.2
-greenlet==0.4.12
 idna==2.6
-meld3==1.0.2
+kombu==4.1.0
 MySQL-python==1.2.5
 pytz==2017.2
+qiniu==7.2.0
+raven==6.3.0
 redis==2.10.6
 requests==2.18.4
-supervisor==3.3.3
+shadowsocks==2.8.2
 urllib3==1.22
-uWSGI==2.0.15
-qiniu==7.2.0
+vine==1.1.4
