async push and send sms

--- a/config/money.conf
+++ b/config/money.conf
@@ -9,3 +9,14 @@ stdout_logfile_maxbytes = 50MB
 stdout_logfile_backups = 100
 stderr_logfile_maxbytes = 50MB
 stderr_logfile_backups = 20
+
+[program:celery]
+directory = /root/workspace/money
+command = /root/workspace/ENV/bin/celery -A money worker -l info
+killasgroup = true
+stderr_logfile = /tmp/celery_err.log
+stdout_logfile = /tmp/celery.log
+stdout_logfile_maxbytes = 50MB
+stdout_logfile_backups = 100
+stderr_logfile_maxbytes = 50MB
+stderr_logfile_backups = 20
